перевод обучения на английский

--- a/party/templates/party/redesign/party.html
+++ b/party/templates/party/redesign/party.html
@@ -152,39 +152,39 @@
     onEduEnd: () => { console.log('[EDU]: Ended'); edu_pragma(99) },
     onEduPageChange: (num) => { console.log(`[EDU]: Current page is ${num}`); edu_pragma(num) },
     onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
-    {% if has_open %}
-    pages: [
-        {
-        text: 'Вам доступен общий список партий со всего света, чтобы Вы могли выбрать ту, что больше всего Вам подходит.',
-        },
-        {
-        text: 'В свою очередь, рекомендую присмотреться к крупным коллективам - обычно, они предоставляют наиболее выгодные условия новым участникам.',
-		awaitedDomElemClass: 'eduBlock1',
-        },
-		{
-        text: 'Выберите любую партию, и нажмите "вступить". После чего, рекомендую связаться с её главой. А я же свяжусь с Вами позже. Благодарю за внимание!',
-        awaitedDomElemClass: 'eduBlock2',
-        },
-		{
-        text: 'Успехов вам!',
-        },
-    ]
-    {% else %}
+	{% if has_open %}
 	pages: [
-        {
-        text: 'К сожалению, я не смогла подобрать для вас ни одной партии со свободным вступлением.',
-        },
-        {
-        text: 'Поэтому, предлагаю вам вернуться к общему чату в "Обзоре", и предложить свою кандидатуру там.',
-        },
-		{
-        text: 'Альтернативный вариант - создать собственную партию. Но будьте готовы самостоятельно обучать и организовывать людей.',
-        },
-		{
-        text: 'На этом наша экскурсия завершается. Благодарю за внимание!',
-        },
-    ]
-    {% endif %}
+			{
+			text: "{% trans 'Вам доступен общий список партий со всего света, чтобы Вы могли выбрать ту, что больше всего Вам подходит.' context 'education' %}",
+			},
+			{
+			text: "{% trans 'В свою очередь, рекомендую присмотреться к крупным коллективам - обычно, они предоставляют наиболее выгодные условия новым участникам.' context 'education' %}",
+			awaitedDomElemClass: 'eduBlock1',
+			},
+			{
+			text: "{% trans 'Выберите любую партию, и нажмите Вступить. После чего, рекомендую связаться с её главой. А я же свяжусь с Вами позже. Благодарю за внимание!' context 'education' %}",
+			awaitedDomElemClass: 'eduBlock2',
+			},
+			{
+			text: "{% trans 'Успехов вам!' context 'education' %}",
+			},
+		]
+	{% else %}
+	pages: [
+			{
+			text: "{% trans 'К сожалению, я не смогла подобрать для вас ни одной партии со свободным вступлением.' context 'education' %}",
+			},
+			{
+			text: "{% trans 'Поэтому, предлагаю вам вернуться к общему чату в Обзоре, и предложить свою кандидатуру там.' context 'education' %}",
+			},
+			{
+			text: "{% trans 'Альтернативный вариант - создать собственную партию. Но будьте готовы самостоятельно обучать и организовывать людей.' context 'education' %}",
+			},
+			{
+			text: "{% trans 'На этом наша экскурсия завершается. Благодарю за внимание!' context 'education' %}",
+			},
+		]
+	{% endif %}
   })
 
   {% endif %}
