--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -196,10 +196,10 @@
   <img class="edu__rewardImg" id="eduRewardImg">
   <p class="edu__text" id="eduText"></p>
   <div class="edu__btns">
-	<button class="edu__btn" id="eduPrevBtn">Назад</button>
-	<button class="edu__btn" id="eduNextBtn">Дальше</button>
+	<button class="edu__btn" id="eduPrevBtn">{% trans 'Назад' context 'education' %}</button>
+	<button class="edu__btn" id="eduNextBtn">{% trans 'Дальше' context 'education' %}</button>
   </div>
-  <button class="edu__dont" id="eduDont">Не показывать обучение</button>
+  <button class="edu__dont" id="eduDont">{% trans 'Не показывать обучение' context 'education' %}</button>
 </div>
 </section>
 
