--- a/player/templates/player/redesign/player_help.html
+++ b/player/templates/player/redesign/player_help.html
@@ -2,42 +2,43 @@
 {% load static %}
 
 <!--блоки Обзора-->
-'overview world block': "Здесь собрана информация о мире игры: население, онлайн, число партий, стран, независимых регионов",
 
-'overview state block': "Здесь вы можете узнать информацию о государстве вашего местонахождения: население, онлайн, число партий",
+'overview world block': "{% trans 'Здесь собрана информация о мире игры: население, онлайн, число партий, стран, независимых регионов' context 'screen_help' %}",
 
-'overview region block': "Здесь вы можете узнать больше о регионе вашего местонахождения: население, онлайн, число партий",
+'overview state block': "{% trans 'Здесь вы можете узнать информацию о государстве вашего местонахождения: население, онлайн, число партий' context 'screen_help' %}",
 
-'overview war block': "Здесь отображается ближайшая к вам война, проходящая в государстве или мире в целом",
+'overview region block': "{% trans 'Здесь вы можете узнать больше о регионе вашего местонахождения: население, онлайн, число партий' context 'screen_help' %}",
 
-'overview event block': "Это особое событие, проходящее в мире Wild Politics прямо сейчас. Успейте принять участие!",
+'overview war block': "{% trans 'Здесь отображается ближайшая к вам война, проходящая в государстве или мире в целом' context 'screen_help' %}",
+
+'overview event block': "{% trans 'Это особое событие, проходящее в мире Wild Politics прямо сейчас. Успейте принять участие!' context 'screen_help' %}",
 
 <!--характеристики-->
 
-'overview power_skill block': "Сила вашего персонажа влияет на конечный урон в войнах. Также, каждая из Характеристик повышает выплаты Финансирования",
+'overview power_skill block': "{% trans 'Сила вашего персонажа влияет на конечный урон в войнах. Также, каждая из Характеристик повышает выплаты Финансирования' context 'screen_help' %}",
 
-'overview knowledge_skill block': "Интеллект влияет на объёмы производимой продукции и возможность улучшения Склада. Также, каждая из Характеристик повышает выплаты Финансирования",
+'overview knowledge_skill block': "{% trans 'Интеллект влияет на объёмы производимой продукции и возможность улучшения Склада. Также, каждая из Характеристик повышает выплаты Финансирования' context 'screen_help' %}",
 
-'overview endurance_skill block': "Выносливость вашего персонажа повышает объёмы добываемого сырья. Также, каждая из Характеристик повышает выплаты Финансирования",
+'overview endurance_skill block': "{% trans 'Выносливость вашего персонажа повышает объёмы добываемого сырья. Также, каждая из Характеристик повышает выплаты Финансирования' context 'screen_help' %}",
 
-'overview skills block': "Здесь вы можете развить своего персонажа, улучшив одну их трёх основных характеристик - Силу, Интеллект, Выносливость",
+'overview skills block': "{% trans 'Здесь вы можете развить своего персонажа, улучшив одну их трёх основных характеристик - Силу, Интеллект, Выносливость' context 'screen_help' %}",
 
-'overview skills_queue block': "Очередь последующей прокачки Характеристик, доступна с Премиум-аккаунтом",
+'overview skills_queue block': "{% trans 'Очередь последующей прокачки Характеристик, доступна с Премиум-аккаунтом' context 'screen_help' %}",
 
-'overview current_skill block': "Время завершения прокачки Характеристики, улучшаемой в данный момент",
+'overview current_skill block': "{% trans 'Время завершения прокачки Характеристики, улучшаемой в данный момент' context 'screen_help' %}",
 
-'overview boost_skill block': "При наличии на Складе текущего региона бустеров, вы можете ускорить прокачку Характеристики, нажав на эту кнопку",
+'overview boost_skill block': "{% trans 'При наличии на Складе текущего региона бустеров, вы можете ускорить прокачку Характеристики, нажав на эту кнопку' context 'screen_help' %}",
 
 <!--выборы-->
 
-'overview pres_elections block': "Выборы президента, проходящие в стране вашего местонахождения",
+'overview pres_elections block': "{% trans 'Выборы президента, проходящие в стране вашего местонахождения' context 'screen_help' %}",
 
-'overview parl_elections block': "Выборы в парламент, проходящие в стране вашего местонахождения",
+'overview parl_elections block': "{% trans 'Выборы в парламент, проходящие в стране вашего местонахождения' context 'screen_help' %}",
 
 <!--прочее-->
 
-'overview chat block': "Общий чат, где вы можете пообщаться со всеми игроками",
+'overview chat block': "{% trans 'Общий чат, где вы можете пообщаться со всеми игроками' context 'screen_help' %}",
 
-'overview state_paties block': "Все партии, существующие в данном государстве",
+'overview state_paties block': "{% trans 'Все партии, существующие в данном государстве' context 'screen_help' %}",
 
-'overview parl_paties block': "Партии, представленные в парламенте государства, и процент занимаемых ими мест",
+'overview parl_paties block': "{% trans 'Партии, представленные в парламенте государства, и процент занимаемых ими мест' context 'screen_help' %}",
