--- a/player/templates/player/redesign/player_status.html
+++ b/player/templates/player/redesign/player_status.html
@@ -23,9 +23,9 @@
 				{{ player.gold }} <!-- значение голды -->
 			</span>
 		</p>
-		<p class="info__energy">
+		<p class="info__energy eduBlockMining3">
 			⚡
-			<span id="energy" class="info__energy-move-left eduBlockMining3">
+			<span id="energy" class="info__energy-move-left">
 				{{ player.energy }} <!-- значение текущей энергии -->
 			</span>
 		</p>
