--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -929,26 +929,26 @@ function addMarker(coordinates) {
     onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
     pages: [
         {
-        text: 'Это - политическая карта всего нашего мира. Она поделена на регионы.',
+        text: "{% trans 'Это - политическая карта всего нашего мира. Она поделена на регионы.' context 'education' %}",
         },
         {
-        text: 'Каждый регион может быть независимым, быть столицей государства, либо же принадлежать государству на правах провинции.',
+        text: "{% trans 'Каждый регион может быть независимым, быть столицей государства, либо же принадлежать государству на правах провинции.' context 'education' %}",
         },
         {
-        text: 'Нажав на любую территорию, Вы откроете небольшое окно с информацией о ней.',
+        text: "{% trans 'Нажав на любую территорию, Вы откроете небольшое окно с информацией о ней.' context 'education' %}",
         },
         {
-        text: 'Краткая информация о регионе позволит Вам узнать его название и владельца, а также проверить, есть ли там запасы сырья.',
+        text: "{% trans 'Краткая информация о регионе позволит Вам узнать его название и владельца, а также проверить, есть ли там запасы сырья.' context 'education' %}",
         },
         {
-        text: 'Для перемещения здесь же доступна кнопка вызова Вашего личного самолёта. Вам потребуется лишь оплатить затраты на топливо, подождать совсем немного - и вот вы уже на другом конце мира!',
+        text: "{% trans 'Для перемещения здесь же доступна кнопка вызова Вашего личного самолёта. Вам потребуется лишь оплатить затраты на топливо, подождать совсем немного - и вот вы уже на другом конце мира!' context 'education' %}",
         },
         {
-        text: 'Награда: 200 золота',
+        text: "{% trans 'Награда: 200 золота' context 'education' %}",
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Чтобы начать путь к покорению всех этих территорий, нам потребуются союзники. Позвольте помочь выбрать Вам партию, хотя бы на первое время.',
+        text: "{% trans 'Чтобы начать путь к покорению всех этих территорий, нам потребуются союзники. Позвольте помочь выбрать Вам партию, хотя бы на первое время.' context 'education' %}",
         },
     ]
   })
