--- a/region/templates/region/redesign/mining.html
+++ b/region/templates/region/redesign/mining.html
@@ -288,55 +288,55 @@
     onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
     pages: [
         {
-        text: 'Итак. В наших с Вами силах - организовывать работы на месторождениях сырья, а также добывать золото на местных приисках.',
+        text: "{% trans 'Итак. В наших с Вами силах - организовывать работы на месторождениях сырья, а также добывать золото на местных приисках.' context 'education' %}",
         },
         {
-        text: 'Организация работ потребует затрат Ваших сил, выраженных в Энергии, но, взамен гарантирует поток Финансирования.',
+        text: "{% trans 'Организация работ потребует затрат Ваших сил, выраженных в Энергии, но, взамен гарантирует поток Финансирования.' context 'education' %}",
         },
         {
-        text: 'Обратите внимание, что золото мы добываем по личной инициативе, поэтому инвесторы не будут оплачивать Вам эти работы.',
+        text: "{% trans 'Обратите внимание, что золото мы добываем по личной инициативе, поэтому инвесторы не будут оплачивать Вам эти работы.' context 'education' %}",
         },
         {
-        text: 'Давайте попробуем выбить часть Финансирования из них прямо сейчас, организовав добычу сырья.',
+        text: "{% trans 'Давайте попробуем выбить часть Финансирования из них прямо сейчас, организовав добычу сырья.' context 'education' %}",
         awaitedDomElemClass: 'eduBlock1',
         },
         {
-        text: 'Отлично! Работа выполнена, средства поступили. Можно забирать.',
+        text: "{% trans 'Отлично! Работа выполнена, средства поступили. Можно забирать.' context 'education' %}",
         awaitedDomElemClass: 'eduBlock2',
         },
         {
-        text: 'Награда: 200 золота',
+        text: "{% trans 'Награда: 200 золота' context 'education' %}",
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Я стараюсь, чтобы Ваше расписание не было загружено слишком сильно. Благодаря этому, вы можете постепенно восстановить Энергию естественным путём.',
+        text: "{% trans 'Я стараюсь, чтобы Ваше расписание не было загружено слишком сильно. Благодаря этому, вы можете постепенно восстановить Энергию естественным путём.' context 'education' %}",
         awaitedDomElemClass: 'eduBlockMining3',
         onlyGlowing: true,
         },
         {
-        text: 'Но иногда, обстоятельства требуют от нас вложения дополнительных сил. На этот случай у нас есть Энергетики.',
+        text: "{% trans 'Но иногда, обстоятельства требуют от нас вложения дополнительных сил. На этот случай у нас есть Энергетики.' context 'education' %}",
         },
         {
-        text: 'Энергетики - ценный ресурс, получаемый за Золото, которое мы с Вами добываем. Они позволяют восполнять запасы Энергии без ожидания.',
+        text: "{% trans 'Энергетики - ценный ресурс, получаемый за Золото, которое мы с Вами добываем. Они позволяют восполнять запасы Энергии без ожидания.' context 'education' %}",
         },
         {
-        text: 'Я как раз принесла вам баночку. Или вам перелить в более изящную ёмкость?',
+        text: "{% trans 'Я как раз принесла вам баночку. Или вам перелить в более изящную ёмкость?' context 'education' %}",
         awaitedDomElemClass: 'eduBlockMining4',
         },
         {
-        text: 'Награда: 200 золота',
+        text: "{% trans 'Награда: 200 золота' context 'education' %}",
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Как ощущения? Снова полны сил? Тогда давайте организуем добычу сырья ещё раз, чтобы Ваш заряд бодрости не пропал даром!',
+        text: "{% trans 'Как ощущения? Снова полны сил? Тогда давайте организуем добычу сырья ещё раз, чтобы Ваш заряд бодрости не пропал даром!' context 'education' %}",
         awaitedDomElemClass: 'eduBlock1',
         },
         {
-        text: 'Отлично! А вот и новый транш...',
+        text: "{% trans 'Отлично! А вот и новый транш...' context 'education' %}",
         awaitedDomElemClass: 'eduBlock2',
         },
         {
-        text: 'Теперь, давайте изучим добытое Вами. Для этого совершим прогулку до регионального Склада',
+        text: "{% trans 'Теперь, давайте изучим добытое Вами. Для этого совершим прогулку до регионального Склада.' context 'education' %}",
         },
     ]
   })
