--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -475,80 +475,80 @@
     onEduEnd: () => { console.log('[EDU]: Ended'); edu_pragma(99) },
     onEduPageChange: (num) => { console.log(`[EDU]: Current page is ${num}`); edu_pragma(num) },
     onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
-    pages: [
+pages: [
         {
-        text: 'Это Ваш cклад. Таких Складов у Вас может быть много, но этот - Ваш первый.',
+        text: "{% trans 'Это Ваш cклад. Таких Складов у Вас может быть много, но этот - Ваш первый.' context 'education' %}",
         },
 		{
-        text: 'Он состоит из двух крупных разделов - непосредственно Склада и защищённого Хранилища, которое всегда у Вас под рукой.',
+        text: "{% trans 'Он состоит из двух крупных разделов - непосредственно Склада и защищённого Хранилища, которое всегда у Вас под рукой.' context 'education' %}",
         },
 		{
-        text: 'У Вас даже может не быть Склада в регионе Вашего местонахождения, но Хранилище - будет всегда.',
+        text: "{% trans 'У Вас даже может не быть Склада в регионе Вашего местонахождения, но Хранилище - будет всегда.' context 'education' %}",
         },
 		{
-        text: 'Для начала же, посмотрим на запасы Склада. Они поделены на три размера:',
+        text: "{% trans 'Для начала же, посмотрим на запасы Склада. Они поделены на три размера:' context 'education' %}",
 		awaitedDomElemClass: 'eduBlock2',
         onlyGlowing: true,
         },
 		{
-        text: '- большой объём, который позволяет хранить Вам необработанное сырьё',
+        text: "{% trans '- большой объём, который позволяет хранить Вам необработанное сырьё' context 'education' %}",
         },
 		{
-        text: '- средний объём, хранящий, в основном, материалы и некоторые товары',
+        text: "{% trans '- средний объём, хранящий, в основном, материалы и некоторые товары' context 'education' %}",
         },
 		{
-        text: '- малый объём, занимаемый, в основном, оружием.',
+        text: "{% trans '- малый объём, занимаемый, в основном, оружием.' context 'education' %}",
         },
 		{
-        text: 'Вам ничего не мешает занять весь малый объём только танками, к примеру. А в большом объёме же у Вас хранятся те ресурсы, что Вы распорядились добыть.',
+        text: "{% trans 'Вам ничего не мешает занять весь малый объём только танками, к примеру. А в большом объёме же у Вас хранятся те ресурсы, что Вы распорядились добыть.' context 'education' %}",
         },
 		{
-        text: 'Когда Вы приметесь торговать, то обратите внимание, что та часть запасов, что Вы захотели продать, со Склада не пропадает до тех пор, пока их не купят. Поэтому, распоряжайтесь объёмом своих Складов с умом.',
+        text: "{% trans 'Когда Вы приметесь торговать, то обратите внимание, что та часть запасов, что Вы захотели продать, со Склада не пропадает до тех пор, пока их не купят. Поэтому, распоряжайтесь объёмом своих Складов с умом.' context 'education' %}",
         },
 		{
-        text: 'Помимо запасов, на Склад можно Выложить Наличные, которыми будут оплачиваться производство заказанных Вами товаров.',
+        text: "{% trans 'Помимо запасов, на Склад можно Выложить Наличные, которыми будут оплачиваться производство заказанных Вами товаров.' context 'education' %}",
 		awaitedDomElemClass: 'eduBlock3',
         onlyGlowing: true,
         },
 		{
-        text: 'Чтобы выложить Наличные, Вам потребуется прилететь в регион Склада, и указать сумму, которая должна остаться здесь.',
+        text: "{% trans 'Чтобы выложить Наличные, Вам потребуется прилететь в регион Склада, и указать сумму, которая должна остаться здесь.' context 'education' %}",
         },
 		  {
-			text: 'Награда: 200 золота',
+			text: "{% trans 'Награда: 200 золота' context 'education' %}",
 			rewardImgUrl: '/static/redesign/img/200_gold.png',
 		  },
 		{
-        text: 'Ладно, это скучно - глядеть на булыжники и нефтяную жижу. Давайте посмотрим на действительно ценные вещи!',
+        text: "{% trans 'Ладно, это скучно - глядеть на булыжники и нефтяную жижу. Давайте посмотрим на действительно ценные вещи!' context 'education' %}",
 		awaitedDomElemClass: 'eduBlock4',
         onlyMobileInteractive: true,
         },
 		{
-        text: 'Помните Энергетики, которые я Вам давала? Они лежат именно здесь. В тёмном, прохладном месте. Здесь же, мы можем заказать производство новых, расходуя Золото.',
+        text: "{% trans 'Помните Энергетики, которые я Вам давала? Они лежат именно здесь. В тёмном, прохладном месте. Здесь же, мы можем заказать производство новых, расходуя Золото.' context 'education' %}",
 		awaitedDomElemClass: 'eduBlock5',
         onlyGlowing: true,
         },
 		{
-        text: 'Так же, в Хранилище находятся Wild Pass. Это карты премиум-доступа.',
+        text: "{% trans 'Так же, в Хранилище находятся Wild Pass. Это карты премиум-доступа.' context 'education' %}",
 		awaitedDomElemClass: 'eduBlock6',
         onlyGlowing: true,
         },
 		{
-        text: 'При их активации, Вы получите возможности, позволяющие облегчить улучшение Ваших характеристик, а также упростить организацию работ на рудниках и заводах.',
+        text: "{% trans 'При их активации, Вы получите возможности, позволяющие облегчить улучшение Ваших характеристик, а также упростить организацию работ на рудниках и заводах.' context 'education' %}",
         },
 		{
-        text: 'Этими предметами можно свободно торговать - они всегда высоко ценятся, и прочие политики готовы платить за них крупные суммы денег.',
+        text: "{% trans 'Этими предметами можно свободно торговать - они всегда высоко ценятся, и прочие политики готовы платить за них крупные суммы денег.' context 'education' %}",
         },
 		{
-        text: 'Раздел "Склад" позволяет Вам управлять тем Складом, который находится в регионе Вашего местоположения.',
+        text: "{% trans 'Раздел Склад позволяет Вам управлять тем Складом, который находится в регионе Вашего местоположения.' context 'education' %}",
         },
 		{
-        text: 'Но, обратите внимание - в других регионах Склада у Вас ещё нет. Поэтому, его потребуется построить там.',
+        text: "{% trans 'Но, обратите внимание - в других регионах Склада у Вас ещё нет. Поэтому, его потребуется построить там.' context 'education' %}",
         },
 		{
-        text: 'Список всех Складов доступен в разделе "Активы". Там же Вы сможете организовать перевозку своих товаров из одного региона в другой.',
+        text: "{% trans 'Список всех Складов доступен в разделе Активы. Там же Вы сможете организовать перевозку своих товаров из одного региона в другой.' context 'education' %}",
         },
 		{
-        text: 'Всё это время, мы с Вами решали задачи, которые были ограничены одним регионом. Теперь же, давайте посмотрим на мир шире!',
+        text: "{% trans 'Всё это время, мы с Вами решали задачи, которые были ограничены одним регионом. Теперь же, давайте посмотрим на мир шире!' context 'education' %}",
         },
     ]
   })
